posiGen_FullsendBox/src/objects/Locus_Client_Upload__c.object
<CustomObject>
    <fields>
        <fullName>Account_SF_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce ID of the account being registered</description>
        <label>Account SF ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locus Client Uploads</relationshipLabel>
        <relationshipName>Locus_Client_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Banner__c</fullName>
        <label>Client Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Field_1__c</fullName>
        <label>Client Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Field_2__c</fullName>
        <label>Client Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Field_3__c</fullName>
        <label>Client Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Phone__c</fullName>
        <label>Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evening_Phone__c</fullName>
        <label>Evening Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocusSystemUploadFiles_DPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocusSystemUploadFiles_DPR</label>
        <referenceTo>Data_Processing_Request__c</referenceTo>
        <relationshipLabel>Locus Client Uploads</relationshipLabel>
        <relationshipName>Locus_Client_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Initially_Installed_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Initially Installed ID</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Locus Client Uploads</relationshipLabel>
        <relationshipName>Locus_Client_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Locus Client Upload</label>
    <nameField>
        <label>Locus Client Upload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locus Client Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>